# learning

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pdf_jni.cpp
app/src/main/java/com/example/learning/: MainActivity.kt  PdfUtils.kt  ZoomablePage.kt  ZoomablePageWithLogging.kt  ZoomablePageWithSelection.kt  ZoomablePdfPage.kt
gradle/wrapper/: gradle-wrapper.properties
